# himax_ai_db

./: CMakeLists.txt  README.md  app.overlay  mcumgr_run.bat  prj.conf  sysbuild.conf
boards/Grovety/nrf52833_allcam/: CMakeLists.txt  Kconfig.defconfig  Kconfig.nrf52833_allcam  board.yml  nrf52833_allcam_nrf52833.dts  nrf52833_allcam_nrf52833.yaml
drivers/VL53L1CB/core/inc/: vl53l1_api.h  vl53l1_api_calibration.h  vl53l1_api_core.h  vl53l1_api_debug.h  vl53l1_api_preset_modes.h  vl53l1_core.h  vl53l1_core_support.h  vl53l1_def.h  vl53l1_dmax.h  vl53l1_dmax_private_structs.h  vl53l1_dmax_structs.h  vl53l1_error_codes.h  vl53l1_error_exceptions.h  vl53l1_error_strings.h  vl53l1_hist_algos_gen3.h  vl53l1_hist_algos_gen4.h  vl53l1_hist_char.h  vl53l1_hist_core.h  vl53l1_hist_funcs.h  vl53l1_hist_map.h  vl53l1_hist_private_structs.h  vl53l1_hist_structs.h  vl53l1_ll_def.h  vl53l1_ll_device.h  vl53l1_nvm.h  vl53l1_nvm_debug.h  vl53l1_nvm_map.h  vl53l1_nvm_structs.h  vl53l1_preset_setup.h  vl53l1_register_funcs.h  vl53l1_register_map.h  vl53l1_register_settings.h  vl53l1_register_structs.h  vl53l1_sigma_estimate.h  vl53l1_silicon_core.h  vl53l1_tuning_parm_defaults.h  vl53l1_wait.h  vl53l1_xtalk.h  vl53l1_xtalk_private_structs.h  vl53l1_zone_presets.h
drivers/VL53L1CB/core/src/: vl53l1_api.c  vl53l1_api_calibration.c  vl53l1_api_core.c  vl53l1_api_debug.c  vl53l1_api_preset_modes.c  vl53l1_api_strings.c  vl53l1_core.c  vl53l1_core_support.c  vl53l1_dmax.c  vl53l1_error_strings.c  vl53l1_hist_algos_gen3.c  vl53l1_hist_algos_gen4.c  vl53l1_hist_char.c  vl53l1_hist_core.c  vl53l1_hist_funcs.c  vl53l1_nvm.c  vl53l1_nvm_debug.c  vl53l1_register_funcs.c  vl53l1_sigma_estimate.c  vl53l1_silicon_core.c  vl53l1_wait.c  vl53l1_xtalk.c  vl53l1_zone_presets.c
drivers/VL53L1CB/platform/inc/: vl53l1_platform_init.h  vl53l1_platform_ipp.h  vl53l1_platform_ipp_imports.h  vl53l1_platform_user_config.h  vl53l1_platform_user_defines.h  vl53l1_types.h
src/: acm_uart.c  acm_uart.h  amode_proc.c  amode_proc.h  bt_proc.c  bt_proc.h  button.c  button.h  detect_handler.c  detect_handler.h  error_codes.h  error_handler.c  error_handler.h  image_proc.c  image_proc.h  leds_ctrl.c  leds_ctrl.h  mutex_wrapper.h  objdet_main.c  version.c  version.h
src/cmd_dec/: batt_chrg_cmd.c  batt_chrg_cmd.h  command_decoder.c  command_decoder.h  common_cmd.c  common_cmd.h  date_time_cmd.c  date_time_cmd.h  himax_cmd.c  himax_cmd.h  image_read_cmd.c  image_read_cmd.h  list_expct_obj_cmd.c  list_expct_obj_cmd.h  list_recg_obj_cmd.c  list_recg_obj_cmd.h  read_stat_cmd.c  read_stat_cmd.h  tof_sensor_cmd.c  tof_sensor_cmd.h
src/hm_ctrl/: himax_comdef.h  himax_control.c  himax_control.h  himax_spi.c  himax_spi.h  himax_spi_data_proc.c  himax_spi_data_proc.h
src/obj_lists/: crc_proc.c  crc_proc.h  list_expected_objects.c  list_expected_objects.h  list_recognized_objects.c  list_recognized_objects.h  lists_common_defs.h  objects_validator.c  objects_validator.h  time_conv.c  time_conv.h
src/pm_ctrl/: pwr_ctrl.c  pwr_ctrl.h  sys_reset.c  sys_reset.h
src/tof_sens/: tof_sensor_comdef.h  tof_sensor_core.c  tof_sensor_core.h  tof_sensor_results.c  tof_sensor_results.h
sysbuild/: mcuboot.conf  mcuboot.overlay
(+3 files in other folders)
